--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /********************************** 
-* Design by:  [your name]
-* Design name:  [your design name]
+* Design by:  Ellie Scaffidi
+* Design name:  Y2K
 * 
 * License: [license name - e.g. MIT if you want to let others
 * use the design with attribution, or All Rights Reserved if you
@@ -30,20 +30,38 @@ h4,
 h5,
 h6 {
   /* Header font */
-  font-family: "Dancing Script", cursive;
+  font-family: Tahoma, Verdana, sans-serif;
 }
 
 /* Background */
 #css-zen-garden {
-  background: linear-gradient(45deg, #f3f3f3 0%, #c8c8c8 100%);
+background-color: #ffd780
 }
-/* Page wrapper */
-.page-wrapper {
-  box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.9);
-  border: 1px solid #ccc;
-  padding: 1em;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  max-width: 960px;
-  margin: 0 auto;
+
+
+.summary{
+  text-align: center;
+}
+
+.page-wrapper{
+  text align: center;
+  padding-top: 1in;
+  padding-bottom:1.5in;
+}
+
+[role=banner] {
+  padding-bottom: 1in;
+  text-align: center;
+}
+
+background-image{
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev/svgjs" viewBox="0 0 800 800">
+<g fill="#a35b12" id="cloud" transform="matrix(1,0,0,1,0,40)">
+<path d="M 353.89221757900214 142.215576080505 A  1 1 0 1 1 581.7365042863491 383.2335475533309 A  1 1 0 1 1 202.09581267762326 385.92814225065496 A  1 1 0 1 1 213.77246221667986 125.44909805023741 A  1 1 0 1 1 353.89221757900214 142.215576080505 Z" stroke-linecap="round" stroke-linejoin="round">
+</path></g></svg>
+}
+
+main,
+div {
+  border: 1px solid red;
 }
