--- a/style.css
+++ b/style.css
@@ -40,39 +40,53 @@ background-color: #f1d08b
 
 .summary{
   text-align: center;
+  background-image: url('data:image/svg+xml,<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"><path fill="%233E9655" d="M26.2,-28.7C36.3,-22.7,48.5,-16.7,58.2,-4C67.9,8.7,75,28,69.4,42.3C63.8,56.6,45.5,65.7,30.4,61.9C15.2,58,3.1,41.3,-14.5,36.4C-32.1,31.4,-55.3,38.4,-64,32.5C-72.8,26.6,-67.1,7.9,-60.1,-6.9C-53,-21.6,-44.6,-32.3,-34.3,-38.2C-24.1,-44.2,-12,-45.3,-2,-42.9C8,-40.6,16.1,-34.7,26.2,-28.7Z" transform="translate(100 100)" /></svg>');
+  background-repeat: no-repeat;
+  font-size: 0.7em;
+  padding-top: 2in;
+  background-size: 750px;
+  background-position: 50% 65%;
+  padding-bottom: 1in;
+  padding: 2in;
+  width: 400px;
+  margin-top: -350px;
+  margin-left: 550px;
 }
 
 .page-wrapper{
   padding-bottom:1.5in;
+  width:1400px;
 }
 
 [role=banner] {
   padding-top: 2in;
-  padding-bottom: 3in;
+  padding-bottom: 2.7in;
   text-align: center;
    background-image: url('data:image/svg+xml,<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"><path fill="%232A704F" d="M32.8,-38.2C47.7,-34.4,68.6,-31.7,76.6,-21.5C84.6,-11.3,79.8,6.6,70.3,18.8C60.8,31.1,46.6,37.9,34.1,45C21.6,52.2,10.8,59.7,2.7,56C-5.4,52.2,-10.7,37.2,-22.2,29.7C-33.7,22.2,-51.4,22.3,-59.8,15.1C-68.1,7.8,-67.2,-6.9,-64.7,-23.1C-62.2,-39.2,-58.2,-56.9,-47.2,-62C-36.2,-67.2,-18.1,-59.7,-4.6,-53.4C9,-47.1,17.9,-42.1,32.8,-38.2Z" transform="translate(100 100)" /></svg>');
 background-size: 990px;
-background-position: 43% 60%;
+background-position: 45% 40%;
 background-repeat: no-repeat;
-font-size: 30px;
+font-size: 28px;
+
 }
 
-.summary {
- background-image: url('data:image/svg+xml,<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"><path fill="%23FF0066" d="M51,-60.9C63.4,-50.3,69.1,-31.7,62.3,-18.6C55.6,-5.5,36.3,2.2,28.9,18.4C21.6,34.5,26,59.2,19.5,67.8C12.9,76.4,-4.8,69,-23,62.6C-41.2,56.3,-60,50.9,-71.6,37.9C-83.3,24.9,-87.8,4.3,-82.3,-12.4C-76.8,-29,-61.3,-41.8,-45.9,-51.8C-30.5,-61.9,-15.2,-69.3,2,-71.7C19.2,-74,38.5,-71.4,51,-60.9Z" transform="translate(100 100)" /></svg>');
+.preamble {
+  font-size: 12px;
+max-width: 750px;
+background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 51 51" xml:space="preserve" fill="" stroke="" transform="rotate(270)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%2346a068;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%2346a068;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%2346a068;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%2346a068;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%2346a068;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%2346a068;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%2346a068;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%2346a068;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%2346a068;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%2346a068;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%2346a068;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%2346a068;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%2346a068;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%2346a068;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%2346a068;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%2346a068;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%2346a068;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
+background-repeat: no-repeat;
+background-size: 60%;
+background-position: 0% 50%;
 }
 
+  
 
 
 
 
 
-
-img{
-url(https://www.stickers-factory.com/media/catalog/product/cache/1/image/363x/040ec09b1e35df139433887a97daa66f/0/3/03816_00.png);
-}
 
 main,
 div {
   border: 1px solid red;
 }
-
