--- a/style.css
+++ b/style.css
@@ -72,15 +72,51 @@ font-size: 28px;
 
 .preamble {
   font-size: 12px;
-max-width: 750px;
+max-width: 600px;
 background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 51 51" xml:space="preserve" fill="" stroke="" transform="rotate(270)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%2346a068;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%2346a068;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%2346a068;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%2346a068;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%2346a068;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%2346a068;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%2346a068;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%2346a068;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%2346a068;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%2346a068;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%2346a068;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%2346a068;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%2346a068;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%2346a068;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%2346a068;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%2346a068;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%2346a068;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
 background-repeat: no-repeat;
-background-size: 60%;
+background-size: 69%;
 background-position: 0% 50%;
 }
 
-  
+.explanation {
+  max-width: 700px;
+  font-size: 12px;
+ background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 10 51 51" xml:space="preserve" fill="%23000000" transform="rotate(270)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%23479465;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%23479465;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%23479465;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%23479465;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%23479465;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%23479465;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%23479465;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%23479465;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%23479465;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%23479465;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%23479465;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%23479465;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%23479465;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%23479465;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%23479465;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%23479465;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%23479465;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
+  background-repeat: no-repeat;
+  background-size: 900px 400px;
+  background-position: 0% 50%;
+}  
+.explanation {
+  background: blue;
+  width: 300px;
+  height: 500px;
+  position: relative;
+  padding-right: 100px;
+  border-top-right-radius: 88px;
+  border-bottom-right-radius: 120px;
+}
+.explanation::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  background: green;
+  top: 0;
+  right: -100px;
+  width: 100px;
+  height: 500px;
+  border-top-right-radius: 120px;
+  border-bottom-right-radius: 80px;
+  background-repeat: none;
+  background-size: cover;
+}
 
+.participation {
+  background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 51 51" xml:space="preserve" fill="%23000000" transform="rotate(90)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%2366924f;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%2366924f;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%2366924f;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%2366924f;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%2366924f;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%2366924f;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%2366924f;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%2366924f;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%2366924f;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%2366924f;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%2366924f;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%2366924f;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%2366924f;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%2366924f;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%2366924f;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%2366924f;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%2366924f;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
+  background-repeat: no-repeat;
+  max-width: 700px;
+
+}
 
 
 
