--- a/style.css
+++ b/style.css
@@ -67,59 +67,81 @@ background-size: 990px;
 background-position: 45% 40%;
 background-repeat: no-repeat;
 font-size: 28px;
-
 }
 
 .preamble {
   font-size: 12px;
 max-width: 600px;
-background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 51 51" xml:space="preserve" fill="" stroke="" transform="rotate(270)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%2346a068;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%2346a068;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%2346a068;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%2346a068;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%2346a068;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%2346a068;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%2346a068;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%2346a068;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%2346a068;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%2346a068;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%2346a068;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%2346a068;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%2346a068;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%2346a068;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%2346a068;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%2346a068;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%2346a068;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
-background-repeat: no-repeat;
-background-size: 69%;
-background-position: 0% 50%;
+background: #006043;
+border-top-right-radius: 230px;
+border-bottom-right-radius: 230px;
+padding-right:100px;
+padding-left: 30px;
 }
 
 .explanation {
-  max-width: 700px;
   font-size: 12px;
- background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 10 51 51" xml:space="preserve" fill="%23000000" transform="rotate(270)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%23479465;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%23479465;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%23479465;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%23479465;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%23479465;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%23479465;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%23479465;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%23479465;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%23479465;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%23479465;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%23479465;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%23479465;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%23479465;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%23479465;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%23479465;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%23479465;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%23479465;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
-  background-repeat: no-repeat;
-  background-size: 900px 400px;
-  background-position: 0% 50%;
-}  
-.explanation {
-  background: blue;
-  width: 300px;
-  height: 500px;
+  background: #008549;
+  width: 700px;
+  height: 200px;
   position: relative;
+  padding-left: 20px;
   padding-right: 100px;
-  border-top-right-radius: 88px;
-  border-bottom-right-radius: 120px;
-}
-.explanation::after {
-  content: " ";
-  display: block;
-  position: absolute;
-  background: green;
-  top: 0;
-  right: -100px;
-  width: 100px;
-  height: 500px;
-  border-top-right-radius: 120px;
-  border-bottom-right-radius: 80px;
-  background-repeat: none;
-  background-size: cover;
+  border-top-right-radius: 230px;
+  border-bottom-right-radius: 230px;
 }
 
 .participation {
-  background-image: url('data:image/svg+xml,<svg height="200px" width="200px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 51 51" xml:space="preserve" fill="%23000000" transform="rotate(90)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><g><path style="fill:%2366924f;" d="M13,10v29c0,6.627,5.373,12,12,12h1c6.627,0,12-5.373,12-12V0H13"></path><circle style="fill:%2366924f;" cx="25.688" cy="17.062" r="10.188"></circle><circle style="fill:%2366924f;" cx="25.625" cy="17.125" r="4"></circle><path style="fill:%2366924f;" d="M19,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,32.552,19.552,33,19,33z"></path><path style="fill:%2366924f;" d="M27,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,32.552,27.552,33,27,33z"></path><path style="fill:%2366924f;" d="M35,33h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,32.552,35.552,33,35,33z"></path><path style="fill:%2366924f;" d="M35,5h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,4.552,35.552,5,35,5z"></path><path style="fill:%2366924f;" d="M35,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,36.552,35.552,37,35,37z"></path><path style="fill:%2366924f;" d="M27,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,36.552,27.552,37,27,37z"></path><path style="fill:%2366924f;" d="M19,37h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,36.552,19.552,37,19,37z"></path><path style="fill:%2366924f;" d="M19,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C20,40.552,19.552,41,19,41z"></path><path style="fill:%2366924f;" d="M27,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C28,40.552,27.552,41,27,41z"></path><path style="fill:%2366924f;" d="M35,41h-3c-0.552,0-1-0.448-1-1l0,0c0-0.552,0.448-1,1-1h3c0.552,0,1,0.448,1,1l0,0 C36,40.552,35.552,41,35,41z"></path><path style="fill:%2366924f;" d="M25.5,30.5c-0.829,0-1.5-0.672-1.5-1.5v-3c0-0.829,0.671-1.5,1.5-1.5S27,25.171,27,26v3 C27,29.828,26.329,30.5,25.5,30.5z"></path><path style="fill:%2366924f;" d="M36,18h-2c-0.828,0-1.5-0.671-1.5-1.5S33.172,15,34,15h2c0.828,0,1.5,0.671,1.5,1.5S36.828,18,36,18 z"></path><path style="fill:%2366924f;" d="M25.5,9.5C24.671,9.5,24,8.829,24,8V4c0-0.829,0.671-1.5,1.5-1.5S27,3.171,27,4v4 C27,8.829,26.329,9.5,25.5,9.5z"></path><path style="fill:%2366924f;" d="M17,19h-1c-0.829,0-1.5-0.671-1.5-1.5S15.171,16,16,16h1c0.829,0,1.5,0.671,1.5,1.5S17.829,19,17,19 z"></path></g></g></svg>');
-  background-repeat: no-repeat;
-  max-width: 700px;
+  text-align: right;
+  margin-top: 50px;
+  max-width: 900px;
+  font-size: 12px;
+border-bottom-left-radius: 230px;
+border-top-left-radius: 230px;
+position:relative;
+margin-left: 700px;
+background: #226e4c;
+padding-left: 80px;
+padding-right: 30px;
+}
 
+.requirements{
+  font-size: 12px;
+  max-width: 500px;
+  border-bottom-left-radius: 230px;
+  border-top-left-radius: 230px;
+padding-left: 100px;
+padding-right:30px;
+text-align:right;
+margin-left: 900px;
+background: #299162;
+}
+
+.design-selection{
+  background-image: url('data:image/svg+xml,<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"><path fill="%23044D2C" d="M41.2,-52.4C51.4,-49.2,56.6,-34.6,59.2,-20.6C61.9,-6.6,62.1,6.8,58.6,19.5C55.2,32.3,48.1,44.4,37.7,53.1C27.3,61.9,13.7,67.3,2.6,63.8C-8.5,60.2,-17,47.7,-28.2,39.2C-39.4,30.7,-53.3,26.3,-61.6,16.3C-69.9,6.4,-72.6,-9,-65,-17.6C-57.4,-26.2,-39.5,-27.9,-26.9,-30.4C-14.4,-32.9,-7.2,-36.1,4.1,-41.8C15.4,-47.5,30.9,-55.6,41.2,-52.4Z" transform="translate(100 100)" /></svg>');
+   background-repeat: no-repeat;
+  padding-top: 2in;
+  background-size: 900px;
+  background-position: 50% 50%;
+  padding-bottom: 1in;
+  padding: 2in;
+  width: 400px;
+  margin-top: -430px;
+  margin-left: -40px;
 }
 
 
 
+
+li{
+
+list-style: none;
+}
+
+
+
+
+img {https://static.vecteezy.com/system/resources/previews/038/265/770/non_2x/a-tree-branches-and-leaves-transparent-background-in-a-spring-minimal-shape-floral-concept-illustration-free-png.png}
 
 
 main,
